--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.4",
   "description": "[Place names](https://stadnamn.npolar.no/) app built with ES2019 web components",
   "devDependencies": {
-    "eslint": "<7",
-    "prettier": "*",
-    "rollup": "<2",
-    "rollup-plugin-commonjs": "^10.1.0",
+    "eslint": "=6.8.0",
+    "prettier": "=2.0.5",
+    "rollup": "=1.32.1",
+    "rollup-plugin-commonjs": "=10.1.0",
     "rollup-plugin-eslint": "<7",
     "rollup-plugin-filesize": "<7",
     "rollup-plugin-live-server": "<2",
@@ -15,9 +15,9 @@
     "rollup-plugin-terser": "<6"
   },
   "dependencies": {
-    "@npolar/fetch-api": "../fetch-api",
+    "@npolar/fetch-api": "https://github.com/npolar/fetch-api#v1.0.0",
     "@npolar/mdc": "../mdc",
-    "@npolar/patch-event": "../patch-event",
+    "@npolar/patch-event": "https://github.com/npolar/patch-event#v1.0.1",
     "leaflet": "=1.6.0",
     "lit-element": "=2.3.1"
   },
