--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@npolar/placenames",
   "type": "module",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "[Place names](https://stadnamn.npolar.no/) app built with ES2019 web components",
   "devDependencies": {
     "eslint": "=6.8.0",
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@npolar/fetch-api": "https://github.com/npolar/fetch-api#v1.0.0",
-    "@npolar/mdc": "../mdc",
+    "@npolar/mdc": "https://github.com/npolar/mdc#v0.10.0",
     "@npolar/patch-event": "https://github.com/npolar/patch-event#v1.0.1",
-    "leaflet": "=1.6.0",
+    "leaflet": "=1.7.1",
     "lit-element": "=2.3.1"
   },
   "scripts": {
